2002-08-05  Rune Zedeler <rune@zedeler.dk>

	* mf/feta-eindelijk.mf: Fix silly typo in 16th and shorter rests.
	
2002-08-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* stepmake/bin/make-version.py: robustify.

	* input/test/rhythm-excercise.ly: new file

	* input/test/blank-notes.ly: new file

	* lily/note-head.cc (head_extent): robustness fix.
	
	* Documentation/user/preface.itely: add some more.

2002-08-04  Rune Zedeler <rune@zedeler.dk>

	* Documentation/user/refman.itely
	* Documentation/user/internals.itely: Documented "Current" property.
	
2002-08-04  Han-Wen  <hanwen@cs.uu.nl>

	* lily/lily-guile.cc: change gh_str02scm to scm_makfrom0str.

2002-08-04  Werner Lemberg  <wl@gnu.org>

	* tex/lilyponddefs.tex: s/filllastpage/lastpagefill/.
	
	* Documentation/user/refman.itely: Document it.

2002-08-04  Han-Wen  <hanwen@cs.uu.nl>

	* lily/main.cc (sane_putenv): Oops.  Should supply a private copy
	to putenv. (this was actually caught by valgrind, but I didn't
	think the error was mine... )

2002-08-03  Han-Wen  <hanwen@cs.uu.nl>

	* tex/lilyponddefs.tex: add filllastpage support.

	* GNUmakefile.in: barf if config.h is older than configure. 

	* VERSION: released 1.5.71 
	
	* lily/beam.cc (consider_auto_knees): rewrite function; now only
	consider horizontal knees. Fixes input/bugs/bizzarre-beam.ly

	* lily/syllable-group.cc (set_lyric_align): fix centering on note
	head for `normal' lyrics. This fixes input/bugs/lyrics-spacing.ly.

2002-08-02  Han-Wen  <hanwen@cs.uu.nl>

	* lily/beam.cc (connect_beams): fix quarter note beams.

	* input/regression/beam-quarter.ly: new file.

2002-08-02  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* buildscripts/mf-to-table.py (postfixes): Reduce the line spacing
	in the font list.

2002-08-02  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/scm-option.cc: excorcise iostream.

	* lily/main.cc: remove iostream usage.

2002-08-02  Han-Wen  <hanwen@cs.uu.nl>

	* scripts/lilypond-book.py: make URL for printfilename option.
